=========
Changelog
=========

This file keeps track of all notable changes to the Slurm Charms.

Unreleased
----------

- added set-node-inventory slurmd action
- updated default Mellanox Infiniband drivers to version 5.4
- fix get-node-inventory action
- fix influxdb-info slurmctld action

0.9.0 - 2022-04-12
------------------

- fix: do not install Nvidia repository by default
- add support for custom NHC parameters
- improve checks when nodes need to be rebooted
- add Nvidia GPU support: install drivers via an action on compute nodes
- update operator framework to 1.3.0

0.8.5 - 2022-01-13
------------------

- add support for ElasticSearch Slurm addon
- pin Operator Framework to 1.2.0

0.8.4 - 2021-12-10
------------------

- use the cluster name as the database name for InfluxDB
- improve logrotate profiles for Slurm and NHC logs
- add epilog-prolog relation

0.8.3 - 2021-11-05
------------------

- add labels to Fluentbit logs: cluster-name, partition-name, hostname, service
- add user-group relation to create user and group on the system
- fix typos in unit status

0.8.2 - 2021-10-13
------------------

- fix changing infiniband repos on Ubuntu
- fix fluentbit parser for slurm logs
- fix creation of user and group when those already exist

0.8.1 - 2021-10-07
------------------

- use Omnivector Solutions' RPM repository to install Slurm
- add Fluentbit relation to forward logs from all the Slurm Charms

0.8.0 - 2021-09-13
------------------

- fix slurmd crashing when etcd in slurmctld is down/not-started/unreachable
- allow installing Slurm from different repositories on Ubuntu
- use Omnivector's PPA for installing Slurm on Ubuntu

0.7.0 - 2021-08-09
------------------

- fix: reduce number of events when a slurmd unit is added/removed
- fix #111: install bullseye gpg keys from files
- add support for Ubuntu partitions on CentOS deploys
- add influxdb-info action to slurmctld
- add grafana relation for slurmctld