@@ -1,4 +1,4 @@
 ops==1.3.0
 influxdb
-etcd3gw==1.0.0
+etcd3gw==1.0.2
 git+https://github.com/omnivector-solutions/slurm-ops-manager.git@0.8.4
