@@ -41,6 +41,7 @@ exclude =
     mod,
 max-line-length = 99
 max-complexity = 10
+docstring-convention = google
 ignore = E126, E127, E241, E261, E265, E501, D202, D204, I100, I201, W503
 
 [isort]
